<resources>
    <string name="app_name">Dogtionary</string>
    <string name="next">Next</string>
    <string name="doggies">Doggies!!</string>
    <string name="submit">Submit</string>
    <string name="breed">Breed</string>
    <string name="by_breed">Search By Breed</string>
    <string name="clear">Clear text</string>
    <string name="favorite">favorite</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
