<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_breed_search"
        android:title="@string/by_breed"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite"/>

    <item
        android:id="@+id/image_tag"
        android:title="@string/tag_items_in_image"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_image_label" />
    <item android:title="@string/settings"
    android:icon="@drawable/ic_menu_icon"/>
</menu>
